--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="dropdown-links">
                             <div>
                                 <div class="dropdown-links">
-                                    <a href="#" class="link-2">
+                                    <a href="#ladekort" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -83,7 +83,7 @@
                         <div class="dropdown-links">
                             <div>
                                 <div class="dropdown-links">
-                                    <a href="#" class="link-2">
+                                    <a href="information.html#priser" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -93,7 +93,7 @@
                                         </span>
                                         Priser på elbiler
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="information.html#rækkevidde" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -103,7 +103,7 @@
                                         </span>
                                         Rækkevidde
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="information.html#garanti" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -113,7 +113,7 @@
                                         </span>
                                         Garanti
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="information.html#batterityper" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -123,7 +123,7 @@
                                         </span>
                                         Batterityper
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="information.html#stiktyper" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
                                                 width="48">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="dropdown-links">
-                            <a href="#" class="link-2">
+                            <a href="information.html#opladningstid" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -147,7 +147,7 @@
                                 </span>
                                 Ladehastighed
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#vedligeholdelse" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -157,7 +157,7 @@
                                 </span>
                                 Service på elbiler
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#stromkilder" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -167,7 +167,7 @@
                                 </span>
                                 Strømkilder
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#wltp" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -433,7 +433,7 @@
 
         <div class="map-container">
             <div>
-                <h2 class="header-1">Ladekort</h2>
+                <h2 class="header-1" id="ladekort">Ladekort</h2>
             </div>
             <div>
                 <div class="button-container">
