--- a/information.html
+++ b/information.html
@@ -28,7 +28,7 @@
                         <div class="dropdown-links">
                             <div>
                                 <div class="dropdown-links">
-                                    <a href="#" class="link-2">
+                                    <a href="index.html#ladekort" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -79,7 +79,7 @@
                         <div class="dropdown-links">
                             <div>
                                 <div class="dropdown-links">
-                                    <a href="#" class="link-2">
+                                    <a href="#priser" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -89,7 +89,7 @@
                                         </span>
                                         Priser på elbiler
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#rækkevidde" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -99,7 +99,7 @@
                                         </span>
                                         Rækkevidde
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#garanti" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -109,7 +109,7 @@
                                         </span>
                                         Garanti
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#batterityper" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -119,7 +119,7 @@
                                         </span>
                                         Batterityper
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#stiktyper" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
                                                 width="48">
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                         <div class="dropdown-links">
-                            <a href="#" class="link-2">
+                            <a href="#opladningstid" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -143,7 +143,7 @@
                                 </span>
                                 Ladehastighed
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#vedligeholdelse" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -153,7 +153,7 @@
                                 </span>
                                 Service på elbiler
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#stromkilder" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -163,7 +163,7 @@
                                 </span>
                                 Strømkilder
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#wltp" class="link-2">
                                 <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                         width="48">
@@ -241,8 +241,8 @@
     </header>
     <main>
 
-        <article id="priser">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="priser">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -266,8 +266,8 @@
                 </div>
             </div>
         </article>
-        <article id="rækkevidde">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="rækkevidde">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -295,8 +295,8 @@
                 </div>
             </div>
         </article>
-        <article id="garanti">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="garanti">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -316,8 +316,8 @@
                 </div>
             </div>
         </article>
-        <article id="opladningstid">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="opladningstid">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -339,8 +339,8 @@
                 </div>
             </div>
         </article>
-        <article id="batterilevetid">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="batterilevetid">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -362,9 +362,9 @@
                 </div>
             </div>
         </article>
-        <article id="batterityper">
+        <article>
             <div class="artikel-container">
-                <div class="artikel-content">
+                <div class="artikel-content" id="batterityper">
                     <div>
                         <h1 class="artikel-overskrift">
                             Batterityper
@@ -386,8 +386,8 @@
                 </div>
             </div>
         </article>
-        <article id="stiktyper">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="stiktyper">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -426,8 +426,8 @@
                 </div>
             </div>
         </article>
-        <article id="vedligeholdelse">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container" id="vedligeholdelse">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -451,8 +451,8 @@
                 </div>
             </div>
         </article>
-        <article id="stromkilde">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container"  id="stromkilder">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
@@ -487,8 +487,8 @@
                 </div>
             </div>
         </article>
-        <article id="wltp">
-            <div class="artikel-container">
+        <article>
+            <div class="artikel-container"  id="wltp">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
