--- a/index.html
+++ b/index.html
@@ -570,6 +570,29 @@
             </div>
         </div>
 
+        <div class="info-grafik-global-container">
+            <div class="info-grafik-row-container">
+                <div class="info-grafik-content">
+                    <h2>
+                        Hvor stor er forskellen i at have en bil der kører på el frem for de andre motortyper?
+                    </h2>
+                    <h3>
+                        I infografikken til højre, vises der 5 eksempler på en bil inden for hver motortype. 
+                        Ved at kigge på købsprisen alene er VW I.D 3 elbilen den dyreste med mere end 20.000kr, 
+                        med en så høj pris i forhold til elbilen modparter, kan man godt se hvorfor de fleste ville 
+                        holde sig væk fra den, men hvis man kigger på de udgifter der ligger om året for de 5 biler, 
+                        kan det ses at VW I.D 3 er markant billigere end konkurrenterne, og hele 11.766kr billigere om året 
+                        end benzindrevne Skoda Octavia
+                    </h3>
+                </div>
+                <div class="info-grafik-container">
+                    <img class="info-grafik-bil" src="img/Info-grafik-optimeret.jpg" alt="Info grafik fra dst">
+                </div>
+
+            </div>
+        </div>
+
+
 
     </main>
     <footer>
