--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </script>
     <script src="js/dropdown.js" defer></script>
     <script src="js/box.js" defer></script>
+    <script src="js/carousel.js" defer></script>
 </head>
 
 <body>
@@ -462,7 +463,35 @@
                 </div>
             </div>
         </div>
-
+    <section>
+        <div class="swiper mySwiper container">
+            <div class="swiper-wrapper content">
+                <div class="swiper-slide card">
+                <div class="card-content">
+                    <div class="image">
+                    <img src="img/dacia_spring-optimeret.jpg" alt="dacia spring"> 
+                    </div>
+                      <div class="name-profession">
+                        <span class="name">Dacia Spring</span>
+                        <span class="profession">
+                            <br> <br> Pris: 159.999kr <br> <br>
+                            Rækkevidde: 230km <br> <br>
+                            Stiktype: Mono-fase
+                        </span>
+                      </div>
+                      <div class="button">
+                        <a href="https://www.dacia.dk/biler/spring">
+                            <button class="aboutMe">Gå til forhandler</button>
+                        </a>
+                      
+                      </div>
+                    </div>
+                  </div>
+                  
+              <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+    </section>
         <div class="card-container">
             <div class="card-flex">
                 <div>
