--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         </span>
                                         Bil katalog
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#ladederhjemme" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -62,7 +62,7 @@
                                         </span>
                                         Lade derhjemme
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#frabenzintilel" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -466,7 +466,7 @@
         <div class="card-container">
             <div class="card-flex">
                 <div>
-                    <div class="firma-logo">EnergiFyn</div>
+                    <div class="firma-logo" id="ladederhjemme">EnergiFyn</div>
                 </div>
                 <div class="cards-flex-row">
                     <div class="card-content">
@@ -570,7 +570,7 @@
             </div>
         </div>
 
-        <div class="info-grafik-global-container">
+        <div class="info-grafik-global-container" id="frabenzintilel">
             <div class="info-grafik-row-container">
                 <div class="info-grafik-content">
                     <h2>
