--- a/information.html
+++ b/information.html
@@ -48,7 +48,7 @@
                                         </span>
                                         Bil katalog
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="index.html#ladederhjemme" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -58,7 +58,7 @@
                                         </span>
                                         Lade derhjemme
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="index.html#frabenzintilel" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
