--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/maps.css">
     <script src="js/maps.js" defer></script>
     <script defer
@@ -517,7 +518,9 @@
                     <p>Serviceaftale 19 kr/mdr</p>
                 </div>
                 <div>
-                    <button class="card-button">Vælg aftale</button>
+                    <a href="https://www.energifyn.dk/privat/ladestandere/ladeboksen/">
+                        <button class="card-button">Vælg aftale</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -539,7 +542,9 @@
                             <p>Leje og serviceaftale 249 kr/md</p>
                         </div>
                         <div>
-                            <button class="card-button-ok">Vælg aftale</button>
+                            <a href="https://www.ok.dk/privat/produkter/elbil-opladning/vores-ladeloesninger/leje-af-ladeboks">
+                                <button class="card-button-ok">Vælg aftale</button>
+                            </a>
                         </div>
                     </div>
                     <div>
@@ -553,7 +558,9 @@
                             <p>Leje og serviceaftale 249 kr/md</p>
                         </div>
                         <div>
-                            <button class="card-button-ok">Vælg aftale</button>
+                            <a href="https://www.ok.dk/privat/produkter/elbil-opladning/vores-ladeloesninger/koeb-en-ladeboks-til-elbil">
+                                <button class="card-button-ok">Vælg aftale</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -594,7 +601,9 @@
                     </div>
                 </div>
                 <div>
-                    <button class="card-button">Vælg aftale</button>
+                    <a href="https://clever.dk/clever-box">
+                        <button class="card-button">Vælg aftale</button>
+                    </a>
                 </div>
             </div>
         </div>
