--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                         </span>
                                         Ladekort
                                     </a>
-                                    <a href="#" class="link-2">
+                                    <a href="#bilkatalog" class="link-2">
                                         <span class="icons">
                                             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960"
                                                 width="48">
@@ -252,7 +252,7 @@
                     <div class="links-content-categori">
                         <div class="links-content">
                             <h2>Fremhævede</h2>
-                            <a href="#" class="link-2">
+                            <a href="#ladekort" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -260,7 +260,7 @@
                                 </svg>
                                 Ladekort
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#bilkatalog" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -268,7 +268,7 @@
                                 </svg>
                                 Bil katalog
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#ladederhjemme" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -276,7 +276,7 @@
                                 </svg>
                                 Lade derhjemme
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#frabenzintilel" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -289,7 +289,7 @@
                     <div class="links-content-categori">
                         <div class="links-content">
                             <h2>Udforsk</h2>
-                            <a href="#" class="link-2">
+                            <a href="information.html#priser" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -297,7 +297,7 @@
                                 </svg>
                                 Priser på elbiler
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#rækkevidde" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -305,7 +305,7 @@
                                 </svg>
                                 Rækkevidde
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#garanti" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -313,7 +313,7 @@
                                 </svg>
                                 Garanti
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#batterityper" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -321,7 +321,7 @@
                                 </svg>
                                 Batterityper
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#stiktyper" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 -960 960 960" width="48">
                                     <path
@@ -329,7 +329,7 @@
                                 </svg>
                                 Stiktyper
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="#information.html#opladningtid" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -337,7 +337,7 @@
                                 </svg>
                                 Ladehastighed
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#vedligeholdelse" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -345,7 +345,7 @@
                                 </svg>
                                 Service på elbiler
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#stromkilder" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -353,7 +353,7 @@
                                 </svg>
                                 Strømkilder
                             </a>
-                            <a href="#" class="link-2">
+                            <a href="information.html#wltp" class="link-2">
                                 <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48"
                                     viewBox="0 96 960 960" width="48">
                                     <path
@@ -464,7 +464,7 @@
             </div>
         </div>
     <section>
-        <div class="swiper mySwiper container">
+        <div class="swiper mySwiper container" id="bilkatalog">
             <div class="swiper-wrapper content">
                 <div class="swiper-slide card">
                 <div class="card-content">
